# resume

./: .gitignore  Cargo.toml  README.md  Rocket.toml  run.bat  run.sh
migrations/2024-01-01-000000_create_resume_tables/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  repository.rs  routes.rs  schema.rs
static/css/: style.css
static/js/: script.js
templates/: base.html.tera  experience.html.tera  index.html.tera  projects.html.tera  skills.html.tera
