[package]
name = "resume_app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.33", features = ["bundled"] }
diesel_migrations = "2.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.rocket_sync_db_pools]
version = "0.1"
default-features = false
features = ["diesel_sqlite_pool"]
